Fixes page horizontal scroll — #118

--- a/assets/scss/5-components/_nav--main.scss
+++ b/assets/scss/5-components/_nav--main.scss
@@ -181,4 +181,8 @@
     left: 100%;
     margin-left: 0.8em;
     font-size: 1.5em;
+
+    @include query-above($small) {
+        display: none;
+    }
 }
